--- a/sose20/index.html
+++ b/sose20/index.html
@@ -102,7 +102,7 @@
                     <br>
                     <a href="https://www.uni-muenchen.de/aktuelles/corona_informationen/index.html">Informationen zum Corona-Virus</a>
                     <br>
-                    <h3><a href="/physixbox">Physixbox</a></h3>
+                    <h3><a href="https://s.5ls.de/physixbox">Physixbox</a></h3>
                 </div>
             <hr>
             <h2>Physik 4. Semester</h2>
