--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -73,7 +73,7 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">F (R U R‘ U‘) (R U R‘ U‘) (R U R‘ U‘) F‘</div>
+            <div class="algorithmus">F (R U R' U') (R U R' U') (R U R' U') F'</div>
         </div>
     </div>
 
@@ -83,9 +83,9 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">(f R U R‘ U‘ f‘) (F R U R‘ U‘ F‘)</div>
-            <div class="alternative">Fisch + U’ + Fisch</div>
-            <div class="alternative">R U2 (R2 U’ R2 U’) R2 U2 R</div>
+            <div class="algorithmus">(f R U R' U' f') (F R U R' U' F')</div>
+            <div class="alternative">Fisch + U' + Fisch</div>
+            <div class="alternative">R U2 (R2 U' R2 U') R2 U2 R</div>
         </div>
     </div>
 
@@ -98,8 +98,8 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">(R2 D) (R‘ U2 R D‘) (R‘ U2 R‘)</div>
-            <div class="alternative">(R’ F2) (R U2 R U2) (R’ F2) (R U2 R’)</div>
+            <div class="algorithmus">(R2 D) (R' U2 R D') (R' U2 R')</div>
+            <div class="alternative">(R' F2) (R U2 R U2) (R' F2) (R U2 R')</div>
         </div>
     </div>
 
@@ -109,7 +109,7 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">(R U R D) (R’ U’ R D’) R2</div>
+            <div class="algorithmus">(R U R D) (R' U' R D') R2</div>
         </div>
     </div>
 
@@ -119,7 +119,7 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">(R U2 R D) (R’ U2 R D’) R2<br><span class="hinweis">Ist Rückwärtsversion von
+            <div class="algorithmus">(R U2 R D) (R' U2 R D') R2<br><span class="hinweis">Ist Rückwärtsversion von
                     Headlights</span>
             </div>
         </div>
