wrong image was displayed

--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -105,7 +105,7 @@
 
     <h3>Chameleon</h3>
     <div class="row">
-        <div class="bul bur ufl ufr">
+        <div class="lub rub ufl ufr">
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
