highlight main algorithmus

--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -60,6 +60,11 @@
         color: grey;
         font-size: smaller;
     }
+
+    .algorithmus{
+        color: mediumblue;
+        font-weight: bold;
+    }
 </style>
 
 <h1>OLL</h1>
@@ -83,9 +88,9 @@
             {% include_relative rubiks-top.svg %}
         </div>
         <div>
-            <div class="algorithmus">(f R U R' U' f') (F R U R' U' F')</div>
+            <div class="algorithmus">R U2 (R2 U' R2 U') R2 U2 R</div>
+            <div class="alternative">(f R U R' U' f') (F R U R' U' F')</div>
             <div class="alternative">Fisch + U' + Fisch</div>
-            <div class="alternative">R U2 (R2 U' R2 U') R2 U2 R</div>
         </div>
     </div>
 
