--- a/sose20/index.html
+++ b/sose20/index.html
@@ -206,9 +206,11 @@
                             </div>
                         </div>
                     <h3><a href="https://www.physik.uni-muenchen.de/lehre/vorlesungen/wise_19_20/T2_quant_mech/">T2</a></h3>
-                    <h3><a href="https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf">Python</a></h3>
+                    <h3>Programming</h3>
                     <div class="indent">
-                            <a href="https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf">Python Cheatsheet</a>
+                        <a href="https://www.pythoncheatsheet.org/">Python Cheatsheet</a> oder <a href="https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf">PDF</a>
+                        <br>
+                        <a href="https://mbeaudru.github.io/modern-js-cheatsheet/">Javascript Cheatsheet</a>
                     </div>
                 </div>
         </div>
