--- a/sose20/index.html
+++ b/sose20/index.html
@@ -202,6 +202,8 @@
                                     <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/dFWH1gIjcs.html">22.</a>
                                     <br>
                                     <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/7lyg08Mguh.html">23.</a>
+                                    <br>
+                                    <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/ASbYhRGH9p.html">24.</a>
                                 </div>
                             </div>
                         </div>
