--- a/sose20/index.html
+++ b/sose20/index.html
@@ -204,6 +204,8 @@
                                     <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/7lyg08Mguh.html">23.</a>
                                     <br>
                                     <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/ASbYhRGH9p.html">24.</a>
+                                    <br>
+                                    <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/yKz6J6sg7A.html">24.</a>
                                 </div>
                             </div>
                         </div>
