--- a/sose20/index.html
+++ b/sose20/index.html
@@ -115,9 +115,9 @@
                             <br>
                             <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/ds9Xbo5YjH.html">Vorlesungen (LMU-Cast)</a>
                         </div>
-                    <h3><a href="https://www.mathematik.uni-muenchen.de/~leidl/NuMaSoSe2020/">M4</a></h3>
+                    <h3><a href="http://www.math.uni-muenchen.de/~leidl/NuMaSoSe2020/">M4</a></h3>
                         <div class="indent">
-                            <a href="https://www.mathematik.uni-muenchen.de/~leidl/NuMaSoSe2020/">Website</a>
+                            <a href="http://www.math.uni-muenchen.de/~leidl/NuMaSoSe2020/">Website</a>
                             <br>
                             <a href="https://uni2work.ifi.lmu.de/course/S20/MI/NuMaM4">Uni2Work</a>
                             <br>
