--- a/sose20/index.html
+++ b/sose20/index.html
@@ -205,7 +205,7 @@
                                     <br>
                                     <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/ASbYhRGH9p.html">24.</a>
                                     <br>
-                                    <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/yKz6J6sg7A.html">24.</a>
+                                    <a href="https://cast.itunes.uni-muenchen.de/vod/playlists/yKz6J6sg7A.html">25. (Ende)</a>
                                 </div>
                             </div>
                         </div>
