--- a/sose20/index.html
+++ b/sose20/index.html
@@ -107,6 +107,12 @@
             <hr>
             <h2>Physik 4. Semester</h2>
                 <div class="indent">
+                    <h3><a href="https://www.praktikum.physik.uni-muenchen.de/p3b/">P3b</a></h3>
+                        <div class="indent">
+                            <a href="https://www.praktikum.physik.uni-muenchen.de/p3b/">Website</a>
+                            <br>
+                            <a href="https://moodle.lmu.de/course/view.php?id=9534">Moodle</a>
+                        </div>
                     <h3><a href="https://www.physik.uni-muenchen.de/lehre/vorlesungen/sose_20/E4-E4p-Atom-und-Molekuelphysik/">E4</a></h3>
                         <div class="indent">
                             <a href="https://www.physik.uni-muenchen.de/lehre/vorlesungen/sose_20/E4-E4p-Atom-und-Molekuelphysik/">Website</a>
