--- a/sose20/index.html
+++ b/sose20/index.html
@@ -94,13 +94,15 @@
         <div class="content">
             <h2>Allgemeines</h2>
                 <div class="indent">
+                    <a href="https://webmail.lrz.de/">Webmail</a>
+                    <br>
                     <a href="https://lmu-munich.zoom.us/">Zoom</a>
                     <br>
                     <a href="https://www.physik.uni-muenchen.de/aus_der_fakultaet/fak_nachrichten/weiteres/corona_lehrbetrieb.html">Regelungen an der Fakultät für Physik</a>
                     <br>
-                    <a href="https://www.physik.uni-muenchen.de/lehre/sose2020/">Informationen zum Online-Lehrbetrieb</a>
+                    <a href="https://www.physik.uni-muenchen.de/lehre/aktuell/">Informationen zum Online-Lehrbetrieb</a>
                     <br>
-                    <a href="https://www.uni-muenchen.de/aktuelles/corona_informationen/index.html">Informationen zum Corona-Virus</a>
+                    <a href="https://www.uni-muenchen.de/aktuelles/corona_informationen/">Informationen zum Corona-Virus</a>
                     <br>
                     <h3><a href="https://s.5ls.de/physixbox">Physixbox</a></h3>
                 </div>
