--- a/wise20/index.html
+++ b/wise20/index.html
@@ -94,9 +94,13 @@
         <div class="content">
             <h2>Allgemeines</h2>
                 <div class="indent">
-                    <a href="https://webmail.lrz.de/">Webmail</a>
+                    <a href="https://webmail.lrz.de/">Webmail (campus)</a>
+                    <br>
+                    <a href="https://webmail.physik.uni-muenchen.de/">Webmail (physik)</a>
                     <br>
                     <a href="https://lmu-munich.zoom.us/">Zoom</a>
+                    <br>
+                    <a href="https://www.ub.uni-muenchen.de/aktuelles/betriebsinfos/faq-zur-bibliotheksnutzung/index.html#reservieren">Bibliotheken Lese- und Arbeitsplätze Reservierung</a>
                     <br>
                     <a href="https://www.physik.uni-muenchen.de/aus_der_fakultaet/fak_nachrichten/weiteres/corona_lehrbetrieb.html">Regelungen an der Fakultät für Physik</a>
                     <br>
