--- a/blogs/index.html
+++ b/blogs/index.html
@@ -96,9 +96,15 @@
                 <div class="indent">
                     <a href="https://blog.cloudflare.com/">Cloudflare</a>
                     <br>
+                    <a href="https://xkcd.com/">xkcd</a>
+                    <br>
+                    <a href="https://waitbutwhy.com/">Wait but Why</a>
+                    <br>
+                    <a href="https://what-if.xkcd.com/">what-if xkcd</a>
+                    <br>
+                    <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
+                    <br>
                     <a href="https://netzpolitik.org/">netzpolitik.org</a>
-                    <br> 
-                    <a href="https://netzpolitik.org/dossiers-recherchen/">netzpolitik.org dossiers und recherchen</a>
                     <br>
                     <h3>to try</h3>
                         <div class="indent">
