--- a/blogs/index.html
+++ b/blogs/index.html
@@ -102,6 +102,8 @@
                     <br>
                     <a href="https://what-if.xkcd.com/">what-if xkcd</a>
                     <br>
+                    <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
+                    <br>
                     <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
                     <br>
                     <a href="https://netzpolitik.org/">netzpolitik.org</a>
