--- a/sose20/index.html
+++ b/sose20/index.html
@@ -141,7 +141,7 @@
                         <div class="indent">
                             <a href="https://piazza.com/class/k8o41poqi89qd">Piazza</a>                                                       
                             <br>
-                            <a href="http://34.89.214.240/">Examserver</a>
+                            <a href="http://35.198.165.24/">Examserver</a>  (<a href="http://34.89.214.240/">old</a>)
                             <br>
                             <a href="https://piazza.com/lmu.de/spring2020/17008/resources">Materialien</a>
                             <br>
