--- a/wise20/index.html
+++ b/wise20/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-        <title>SoSe20</title>
+        <title>WiSe20</title>
         <style>
             body{
                 font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -89,7 +89,7 @@
     </head>
     <body>
         <div class="heading">
-            <h1>SoSe20</h1>
+            <h1>WiSe20</h1>
         </div>
         <div class="content">
             <h2>Allgemeines</h2>
