--- a/wise20/index.html
+++ b/wise20/index.html
@@ -121,6 +121,10 @@
                         <div class="indent">
                             <a href="https://www.physik.uni-muenchen.de/lehre/vorlesungen/wise_20_21/E6/">Website</a>
                         </div>
+                    <h3><a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">V.1</a></h3>
+                        <div class="indent">
+                            <a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">Website</a>
+                        </div>
                 </div>
             <hr>
             <h2>Referenz</h2>
