--- a/wise20/index.html
+++ b/wise20/index.html
@@ -121,9 +121,9 @@
                         <div class="indent">
                             <a href="https://www.physik.uni-muenchen.de/lehre/vorlesungen/wise_20_21/E6/">Website</a>
                         </div>
-                    <h3><a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">V.1 (Fortgeschrittenenpraktikum 2)</a></h3>
+                    <h3><a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">V.1</a></h3>
                         <div class="indent">
-                            <a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">Website</a>
+                            <a href="https://www.physik.uni-muenchen.de/lehre/praktika/f-praktikum/f1-praktikum/">Fortgeschrittenenpraktikum 2</a>
                         </div>
                 </div>
             <hr>
