--- a/journals/index.html
+++ b/journals/index.html
@@ -94,7 +94,7 @@
         <div class="content">
             <h2>General</h2>
                 <div class="indent">
-                    <h3>Nature</h3>
+                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes">Nature</a></h3>
                         <div class="indent">
                             <a href="https://www.nature.com/nature/volumes">Public</a>
                             <br>
