--- a/journals/index.html
+++ b/journals/index.html
@@ -100,7 +100,20 @@
                             <br>
                             <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes">LMU</a>
                         </div>
+                    <h3><a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">science</a></h3>
+                        <div class="indent">
+                            <a href="https://science.sciencemag.org/content/by/year">Public</a>
+                            <br>
+                            <a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">LMU</a>
+                        </div>
+                    <h3><a href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year">PNAS</a></h3>
+                        <div class="indent">
+                            <a href="https://www.pnas.org/content/by/year">Public</a>
+                            <br>
+                            <a href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year">LMU</a>
+                        </div>
                 </div>
+            
         </div>
     </body>
 </html>
