--- a/journals/index.html
+++ b/journals/index.html
@@ -100,7 +100,7 @@
                             <br>
                             <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nature/volumes">LMU</a>
                         </div>
-                    <h3><a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">science</a></h3>
+                    <h3><a href="https://science-sciencemag-org.emedien.ub.uni-muenchen.de/content/by/year">Science</a></h3>
                         <div class="indent">
                             <a href="https://science.sciencemag.org/content/by/year">Public</a>
                             <br>
