--- a/journals/index.html
+++ b/journals/index.html
@@ -113,7 +113,21 @@
                             <a href="https://www-pnas-org.emedien.ub.uni-muenchen.de/content/by/year">LMU</a>
                         </div>
                 </div>
-            
+            <h2>Physics</h2>
+                <div class="indent">
+                     <h3><a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/">Reviews of Modern Physics</a></h3>
+                        <div class="indent">
+                            <a href="https://journals.aps.org/rmp/">Public</a>
+                            <br>
+                            <a href="https://journals-aps-org.emedien.ub.uni-muenchen.de/rmp/">LMU</a>
+                        </div>
+                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes">Nature Physics</a></h3>
+                        <div class="indent">
+                            <a href="https://www.nature.com/nphys/volumes">Public</a>
+                            <br>
+                            <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes">LMU</a>
+                        </div>
+                </div>
         </div>
     </body>
 </html>
