--- a/journals/index.html
+++ b/journals/index.html
@@ -127,6 +127,18 @@
                             <br>
                             <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/nphys/volumes">LMU</a>
                         </div>
+                    <h3><a href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles">Physics Reports</a></h3>
+                        <div class="indent">
+                            <a href="https://www.journals.elsevier.com/physics-reports/recent-articles">Public</a>
+                            <br>
+                            <a href="https://www-journals-elsevier-com.emedien.ub.uni-muenchen.de/physics-reports/recent-articles">LMU</a>
+                        </div>
+                     <h3><a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/">Science Advances</a></h3>
+                        <div class="indent">
+                            <a href="https://advances.sciencemag.org/">Public</a>
+                            <br>
+                            <a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/">LMU</a>
+                        </div>
                 </div>
         </div>
     </body>
