--- a/journals/index.html
+++ b/journals/index.html
@@ -139,6 +139,12 @@
                             <br>
                             <a href="https://advances-sciencemag-org.emedien.ub.uni-muenchen.de/">LMU</a>
                         </div>
+                    <h3><a href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms">Nature Communications</a></h3>
+                        <div class="indent">
+                            <a href="https://www.nature.com/subjects/physical-sciences/ncomms">Public</a>
+                            <br>
+                            <a href="https://www-nature-com.emedien.ub.uni-muenchen.de/subjects/physical-sciences/ncomms">LMU</a>
+                        </div>
                 </div>
         </div>
     </body>
