--- a/blogs/index.html
+++ b/blogs/index.html
@@ -98,6 +98,10 @@
                     <br>
                     <a href="https://xkcd.com/">xkcd</a>
                     <br>
+                    <a href="https://blog.mozilla.org/">Mozilla</a>
+                    <br>
+                    <a href="https://signal.org/blog/">Signal</a>
+                    <br>
                     <a href="https://waitbutwhy.com/">Wait but Why</a>
                     <br>
                     <a href="https://what-if.xkcd.com/">what-if xkcd</a>
