--- a/blogs/index.html
+++ b/blogs/index.html
@@ -96,9 +96,11 @@
                 <div class="indent">
                     <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
                     <br>
-                    <a href="https://xkcd.com/">xkcd</a>
+                    <a href="https://engineering.atspotify.com/">Engineering at Spotify</a>
                     <br>
                     <a href="https://blog.mozilla.org/">Mozilla</a>
+                    <br>
+                    <a href="https://xkcd.com/">xkcd</a>
                     <br>
                     <a href="https://signal.org/blog/">Signal</a>
                     <br>
@@ -109,43 +111,7 @@
                     <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
                     <br>
                     <a href="https://netzpolitik.org/">netzpolitik.org</a>
-                    <br>
-                    <h3>to try</h3>
-                        <div class="indent">
-                            <a href="https://blog.cryptographyengineering.com/useful-cryptography-resources/">cryptographyengineering</a>
-                            <br>
-                            <a href="https://www.schneier.com/">Schneier on Security</a>          
-                            <br>
-                            <a href="https://www.cryptomathic.com/news-events/blog">Cryptomathic</a>
-                            <br>
-                            <a href="https://rdist.root.org/">rdist</a>
-                            <br>
-                            <a href="http://bristolcrypto.blogspot.com/">Bristol Cryptography Blog</a>
-                            <br>
-                            <a href="http://travisgoodspeed.blogspot.com/">Travis Goodspeed's Blog</a>
-                            <br>
-                            <a href="https://www.lightbluetouchpaper.org/">lightbluetouchpaper</a>
-                            <br>
-                            <a href="https://goodenoughsecurity.blogspot.com/">goodenoughsecurity</a>
-                            <br>
-                            <a href="https://cryptologie.net/">cryptologie.net</a>
-                            <br>
-                            <a href="https://security.googleblog.com/">Google Security Blog</a>
-                            <br>
-                            <a href="https://www.esat.kuleuven.be/cosic/category/blog/">Cosic Cryptography Blog (KU Leuven)</a>
-                            <br>
-                            <a href="https://www.ibm.com/blogs/research/">ibm research</a>
-                            <br>
-                            <a href=""></a>
-                            <br>
-                            <a href=""></a>
-                            <br>
-                            <a href=""></a>
-                            <br>
-                            <a href=""></a>
-                        </div>
                 </div>
-            <!-- <hr> -->
         </div>
     </body>
 </html>
