--- a/blogs/index.html
+++ b/blogs/index.html
@@ -96,17 +96,19 @@
                 <div class="indent">
                     <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
                     <br>
-                    <a href="https://engineering.atspotify.com/">Engineering at Spotify</a>
-                    <br>
-                    <a href="https://blog.mozilla.org/">Mozilla</a>
-                    <br>
                     <a href="https://xkcd.com/">xkcd</a>
+                    <br>
+                    <a href="https://drewdevault.com/">drewdevault</a>
                     <br>
                     <a href="https://signal.org/blog/">Signal</a>
                     <br>
                     <a href="https://waitbutwhy.com/">Wait but Why</a>
                     <br>
                     <a href="https://what-if.xkcd.com/">what-if xkcd</a>
+                    <br>
+                    <a href="https://engineering.atspotify.com/">Engineering at Spotify</a>
+                    <br>
+                    <a href="https://blog.mozilla.org/">Mozilla</a>
                     <br>
                     <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
                     <br>
