--- a/blogs/index.html
+++ b/blogs/index.html
@@ -102,6 +102,8 @@
                     <br>
                     <a href="https://signal.org/blog/">Signal</a>
                     <br>
+                    <a href="https://github.blog/">Github Blog</a>
+                    <br>
                     <a href="https://waitbutwhy.com/">Wait but Why</a>
                     <br>
                     <a href="https://what-if.xkcd.com/">what-if xkcd</a>
