--- a/blogs/index.html
+++ b/blogs/index.html
@@ -92,13 +92,25 @@
             <h1>Blogs to read</h1>
         </div>
         <div class="content">
-            
+            <h2>Gemini</h2>
                 <div class="indent">
+                    <a href="gemini://drewdevault.com/">drewdevault</a>
+                    <br>
+                    <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
+                </div>            
+            <hr>
+                <div class="indent">
+                    <a href="https://drewdevault.com/">drewdevault</a>
+                    <br>
+                    <a href="https://blog.ncase.me/">ncase</a>
+                    <br>
+                    <a href="https://bkastl.de/notes/">bkastl</a>
+                    <br>
+                    <a href="https://teuxdeux.com/blog/">teuxdeux</a>
+                    <br>
                     <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
                     <br>
                     <a href="https://xkcd.com/">xkcd</a>
-                    <br>
-                    <a href="https://drewdevault.com/">drewdevault</a>
                     <br>
                     <a href="https://signal.org/blog/">Signal</a>
                     <br>
