--- a/blogs/index.html
+++ b/blogs/index.html
@@ -3,36 +3,40 @@
     <head>
         <title>Blogs to read</title>
         <style>
-            body{
-                font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            body {
+                font-family: "Rubik", -apple-system, BlinkMacSystemFont,
+                    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+                    "Helvetica Neue", sans-serif;
                 font-size: 2rem;
                 padding-top: 3rem;
                 padding-bottom: 10rem;
             }
-            .indent{
+            .indent {
                 margin-left: 10rem;
             }
-            .content{
+            .content {
                 margin-left: 10vw;
                 margin-right: 10vw;
                 padding-left: 1rem;
                 padding-right: 1rem;
                 min-width: max-content;
             }
-            .heading{
-                text-align: center;                
+            .heading {
+                text-align: center;
             }
             hr {
                 margin-top: 3rem;
             }
-            a, .a{
+            a,
+            .a {
                 text-decoration: none;
                 color: #111111;
                 position: relative;
                 white-space: nowrap;
                 outline: none;
             }
-            a::after, .a::after{
+            a::after,
+            .a::after {
                 content: "";
                 position: absolute;
                 z-index: -1;
@@ -40,15 +44,22 @@
                 bottom: 0;
                 left: -0.05em;
                 right: -0.05em;
-                transition: top 180ms cubic-bezier(0, .8, .1, 1);
-                background-color: rgba(65,80,230,0.5);
+                transition: top 180ms cubic-bezier(0, 0.8, 0.1, 1);
+                background-color: rgba(65, 80, 230, 0.5);
             }
             @media (hover: hover) {
-                a:hover::after, .a:hover::after {
+                a:hover::after,
+                .a:hover::after {
                     top: 0%;
-                }   
+                }
             }
-            a.invisible::after, h1>a::after, h2>a::after, h3>a::after, h4>a::after, h5>a::after, h6>a::after{
+            a.invisible::after,
+            h1 > a::after,
+            h2 > a::after,
+            h3 > a::after,
+            h4 > a::after,
+            h5 > a::after,
+            h6 > a::after {
                 display: none;
             }
             br {
@@ -56,7 +67,7 @@
                 content: ""; /* clears default height */
                 margin-top: 0.15rem;
             }
-            .collapsible > input[type='checkbox'] {
+            .collapsible > input[type="checkbox"] {
                 display: none;
             }
             .collapsible > label {
@@ -64,7 +75,7 @@
                 transition: all 0.25s ease-out;
             }
             .collapsible > label::before {
-                content: ' ';
+                content: " ";
                 display: inline-block;
                 border-top: 0.3rem solid transparent;
                 border-bottom: 0.3rem solid transparent;
@@ -72,7 +83,7 @@
                 vertical-align: middle;
                 margin-right: 0.3rem;
                 transform: translateY(-0.1rem);
-                transition: transform .2s ease-out;
+                transition: transform 0.2s ease-out;
             }
             .collapsible > input:checked + label::before {
                 transform: rotate(90deg) translateX(-3px);
@@ -80,9 +91,9 @@
             .collapsible > .collapsible-content {
                 max-height: 0px;
                 overflow: hidden;
-                transition: max-height .25s ease-in-out;
+                transition: max-height 0.25s ease-in-out;
             }
-            .collapsible > input:checked + label  + .collapsible-content {
+            .collapsible > input:checked + label + .collapsible-content {
                 max-height: 100vh;
             }
         </style>
@@ -93,41 +104,43 @@
         </div>
         <div class="content">
             <h2>Gemini</h2>
-                <div class="indent">
-                    <a href="gemini://drewdevault.com/">drewdevault</a>
-                    <br>
-                    <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
-                </div>            
-            <hr>
-                <div class="indent">
-                    <a href="https://drewdevault.com/">drewdevault</a>
-                    <br>
-                    <a href="https://blog.ncase.me/">ncase</a>
-                    <br>
-                    <a href="https://bkastl.de/notes/">bkastl</a>
-                    <br>
-                    <a href="https://teuxdeux.com/blog/">teuxdeux</a>
-                    <br>
-                    <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
-                    <br>
-                    <a href="https://xkcd.com/">xkcd</a>
-                    <br>
-                    <a href="https://signal.org/blog/">Signal</a>
-                    <br>
-                    <a href="https://github.blog/">Github Blog</a>
-                    <br>
-                    <a href="https://waitbutwhy.com/">Wait but Why</a>
-                    <br>
-                    <a href="https://what-if.xkcd.com/">what-if xkcd</a>
-                    <br>
-                    <a href="https://engineering.atspotify.com/">Engineering at Spotify</a>
-                    <br>
-                    <a href="https://blog.mozilla.org/">Mozilla</a>
-                    <br>
-                    <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
-                    <br>
-                    <a href="https://netzpolitik.org/">netzpolitik.org</a>
-                </div>
+            <div class="indent">
+                <a href="gemini://drewdevault.com/">drewdevault</a>
+                <br />
+                <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
+            </div>
+            <hr />
+            <div class="indent">
+                <a href="https://drewdevault.com/">drewdevault</a>
+                <br />
+                <a href="https://blog.ncase.me/">ncase</a>
+                <br />
+                <a href="https://bkastl.de/notes/">bkastl</a>
+                <br />
+                <a href="https://teuxdeux.com/blog/">teuxdeux</a>
+                <br />
+                <a href="https://blog.cloudflare.com/">The Cloudflare Blog</a>
+                <br />
+                <a href="https://xkcd.com/">xkcd</a>
+                <br />
+                <a href="https://signal.org/blog/">Signal</a>
+                <br />
+                <a href="https://github.blog/">Github Blog</a>
+                <br />
+                <a href="https://waitbutwhy.com/">Wait but Why</a>
+                <br />
+                <a href="https://what-if.xkcd.com/">what-if xkcd</a>
+                <br />
+                <a href="https://engineering.atspotify.com/"
+                    >Engineering at Spotify</a
+                >
+                <br />
+                <a href="https://blog.mozilla.org/">Mozilla</a>
+                <br />
+                <a href="https://netflixtechblog.com/">Netflix TechBlog</a>
+                <br />
+                <a href="https://netzpolitik.org/">netzpolitik.org</a>
+            </div>
         </div>
     </body>
 </html>
