--- a/blogs/index.html
+++ b/blogs/index.html
@@ -96,6 +96,15 @@
             .collapsible > input:checked + label + .collapsible-content {
                 max-height: 100vh;
             }
+
+            .proxy > img {
+                width: 1.5rem;
+                padding-left: 0.5rem;
+            }
+
+            .proxy {
+                margin-left: 1rem;
+            }
         </style>
     </head>
     <body>
@@ -106,13 +115,28 @@
             <h2>Gemini</h2>
             <div class="indent">
                 <a href="gemini://drewdevault.com/">drewdevault</a>
+                <a href="https://drewdevault.com/" class="proxy">
+                    <img src="/external.svg" />
+                </a>
                 <br />
                 <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
+                <a href="https://gmi.skyjake.fi/" class="proxy">
+                    <img src="/external.svg" />
+                </a>
+                <br />
+                <a href="gemini://seirdy.one/">seirdy</a>
+                <a href="https://seirdy.one/" class="proxy">
+                    <img src="/external.svg" />
+                </a>
+                <br />
+                <a href="gemini://warmedal.se/~bjorn/">bjorn</a>
+                <a href="https://warmedal.se/~bjorn/" class="proxy">
+                    <img src="/external.svg" />
+                </a>
             </div>
             <hr />
+            <h2>HTTP</h2>
             <div class="indent">
-                <a href="https://drewdevault.com/">drewdevault</a>
-                <br />
                 <a href="https://blog.ncase.me/">ncase</a>
                 <br />
                 <a href="https://bkastl.de/notes/">bkastl</a>
