--- a/blogs/index.html
+++ b/blogs/index.html
@@ -120,7 +120,7 @@
                 </a>
                 <br />
                 <a href="gemini://skyjake.fi/gemlog/">skyjake</a>
-                <a href="https://gmi.skyjake.fi/" class="proxy">
+                <a href="https://gmi.skyjake.fi/gemlog/" class="proxy">
                     <img src="/external.svg" />
                 </a>
                 <br />
