--- a/blogs/index.html
+++ b/blogs/index.html
@@ -141,7 +141,7 @@
                 <br />
                 <a href="https://bkastl.de/notes/">bkastl</a>
                 <br />
-                <a href="https://teuxdeux.com/blog/">teuxdeux</a>
+                <a href="https://teuxdeux.com/blog">teuxdeux</a>
                 <br />
                 <a href="https://xkcd.com/">xkcd</a>
                 <br />
