--- a/blogs/index.html
+++ b/blogs/index.html
@@ -151,6 +151,8 @@
                 <br />
                 <a href="https://github.blog/">Github Blog</a>
                 <br />
+                <a href="https://www.rdegges.com/">rdegges</a>
+                <br />
                 <a href="https://waitbutwhy.com/">Wait but Why</a>
                 <br />
                 <a href="https://what-if.xkcd.com/">what-if xkcd</a>
