--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -135,4 +135,15 @@
       </div>
     </div>
   </div>
+
+  <h2>Fish</h2>
+  <h3>Right</h3>
+  <div class="row">
+    <div class="ufl fur rub bul">{% include_relative rubiks-top.svg %}</div>
+  </div>
+
+  <h3>Left</h3>
+  <div class="row">
+    <div class="ufr ful lub bur">{% include_relative rubiks-top.svg %}</div>
+  </div>
 </div>
