hr visual seperation

--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -37,12 +37,11 @@
 
   body {
     max-width: 80vw;
-    margin: 0 auto;
+    margin: 5vh auto;
   }
 
   .row {
     display: flex;
-    justify-content: space-between;
   }
 
   .row > .col-2 {
@@ -70,6 +69,10 @@
   .algorithmus {
     color: mediumblue;
     font-weight: bold;
+  }
+
+  hr {
+    margin: 2rem 0;
   }
 </style>
 
@@ -99,6 +102,7 @@
     </div>
   </div>
 
+  <hr />
   <h2>Zwei gelbe Ecken oben</h2>
 
   <h3>Headlights</h3>
@@ -136,6 +140,7 @@
     </div>
   </div>
 
+  <hr />
   <h2>Fish</h2>
   <h3>Right</h3>
   <div class="row">
