more fish positions

--- a/rubiks/index.html
+++ b/rubiks/index.html
@@ -142,13 +142,13 @@
 
   <hr />
   <h2>Fish</h2>
-  <h3>Right</h3>
   <div class="row">
     <div class="ufl fur rub bul">{% include_relative rubiks-top.svg %}</div>
+    <div class="ufl lub bur rfu">{% include_relative rubiks-top.svg %}</div>
+    <div class="rub rfu lub lfu">{% include_relative rubiks-top.svg %}</div>
+    <div class="bul rfu bur lfu">{% include_relative rubiks-top.svg %}</div>
+    <div class="urb ubl fur ful">{% include_relative rubiks-top.svg %}</div>
+    <div class="ubl ufr rub ful">{% include_relative rubiks-top.svg %}</div>
   </div>
 
-  <h3>Left</h3>
-  <div class="row">
-    <div class="ufr ful lub bur">{% include_relative rubiks-top.svg %}</div>
-  </div>
 </div>
