--- a/platz.html
+++ b/platz.html
@@ -1,28 +1,73 @@
-<meta http-equiv="refresh" content="300"/>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-<title>Auslastung Bibs</title>
+<!DOCTYPE html>
+<html lang="de">
+  <meta charset="utf-8" />
 
-<h1>Hauptgebäude</h1>
+  <meta http-equiv="refresh" content="300" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+  />
+  <title>Auslastung Bibs</title>
 
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=theo"></iframe>
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=als"></iframe>
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=histo"></iframe>
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=phil"></iframe>
+  <h1>Hauptgebäude</h1>
 
-<h1>Mathebau</h1>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=theo"
+  ></iframe>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=als"
+  ></iframe>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=histo"
+  ></iframe>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=phil"
+  ></iframe>
 
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=mathe"></iframe>
+  <h1>Mathebau</h1>
 
-<h1>Geogebäude</h1>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=mathe"
+  ></iframe>
 
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=geo"></iframe>
+  <h1>Geogebäude</h1>
 
-<h1>Großhadern</h1>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=geo"
+  ></iframe>
 
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=cup"></iframe>
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=bio"></iframe>
-<iframe frameborder="0" style="width: 100%; height: 47px; border: none;" src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=biolehr"></iframe>
+  <h1>Großhadern</h1>
 
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=cup"
+  ></iframe>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=bio"
+  ></iframe>
+  <iframe
+    frameborder="0"
+    style="width: 100%; height: 47px; border: none"
+    src="https://auslastung.ub.uni-muenchen.de/index.php?r=site/grafik&user=biolehr"
+  ></iframe>
 
-<hr style="margin-top: 5rem;">
-<a href="https://www.ub.uni-muenchen.de/arbeiten/platzfinder/index.html">UB Platzfinder</a>
+  <hr style="margin-top: 5rem" />
+  <a href="https://www.ub.uni-muenchen.de/arbeiten/platzfinder/index.html"
+    >UB Platzfinder</a
+  >
+</html>
